--- a/Spring Game Jam 2021/.classpath
+++ b/Spring Game Jam 2021/.classpath
@@ -6,6 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/LWJGL3"/>
 	<classpathentry kind="lib" path="DefaultResources">
 		<attributes>
 			<attribute name="module" value="true"/>
